--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@ permalink: false
 
 {% extends "_templates/layouts/default.html" %}
 
-{% block content %}
-    {% include "_templates/test.html" %}
-    <p>yes</p>
+{% block page_content %}
+    {% include "_templates/partials/test.html" %}
 {% endblock %}
